--- a/03-beyond-borders.Rmd
+++ b/03-beyond-borders.Rmd
@@ -12,12 +12,12 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Understanding models for spatial structure
+# Spatial structure {#beyond-borders}
 \adjustmtc
 \markboth{Models for spatial structure}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-Code for the analysis in this chapter is available from [`athowes/areal-comparison`](https://github.com/athowes/areal-comparison) and supported by the R package [`arealutils`](https://athowes.github.io/arealutils).
+Code for the analysis in this chapter is available from [`athowes/beyond-borders`](https://github.com/athowes/beyond-borders) and supported by the R package [`arealutils`](https://athowes.github.io/arealutils).
 Include an edited version of the corresponding paper here.
 
 ## Background
