--- a/front-and-back-matter/_originality.Rmd
+++ b/front-and-back-matter/_originality.Rmd
@@ -1,3 +1,2 @@
-Putting aside the parts I didn't do, I did this work.
-Me.
-Adam Howes.
+This thesis, and the work presented in it, is work that I conducted myself.
+In all cases where I describe others' work, I provide appropriate references.
