--- a/references.bib
+++ b/references.bib
@@ -430,6 +430,18 @@
     number = {4}
 }
 
+@article{howes2023beyond,
+    author = {Howes, Adam and Eaton, Jeffrey W. and Flaxman, Seth R.},
+    title = {{Beyond borders: evaluating the suitability of spatial adjacency for small-area estimation}},
+    year = {2023+},
+}
+
+@article{howes2023fast,
+    author = {Howes, Adam and Stringer, Alex and Flaxman, Seth R. and Eaton, Jeffrey W.},
+    title = {{Fast approximate Bayesian inference of HIV indicators using PCA adaptive Gauss-Hermite quadrature}},
+    year = {2023+},
+}
+
 @article {wolock2021evaluating,
 article_type = {journal},
 title = {Evaluating distributional regression strategies for modelling self-reported sexual age-mixing},
@@ -531,4 +543,18 @@ URL= {https://www.r-inla.org/faq},
   author={McCullagh, Peter and Nelder, John A},
   year={1989},
   publisher={Routledge}
+}
+
+@book{mcelreath2020statistical,
+  title={Statistical rethinking: A Bayesian course with examples in R and Stan},
+  author={McElreath, Richard},
+  year={2020},
+  publisher={CRC press}
+}
+
+@book{gelman2013bayesian,
+  title={Bayesian data analysis},
+  author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Dunson, David B and Vehtari, Aki and Rubin, Donald B},
+  year={2013},
+  publisher={CRC press}
 }
