--- a/04-multi-agyw.Rmd
+++ b/04-multi-agyw.Rmd
@@ -12,37 +12,54 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# A multinomial spatio-temporal model for risk group proportions {#multi-agyw}
+# A model for risk group proportions {#multi-agyw}
 \adjustmtc
-\markboth{A multinomial spatio-temporal model for risk group proportions}{}
+\markboth{A model for risk group proportions}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
 In this chapter I describe an application of Bayesian spatio-temporal statistics to small-area estimation of HIV risk group proportions.
 This work was done in collaboration with colleagues from the MRC Centre for Global Infectious Disease Analysis and UNAIDS.
-My role in the work was to develop the statistical model, building upon an earlier version of the analysis conducted by Kathryn Risher.
-The results are described in @howes2023spatio, and are now beginning to be used by countries to guide policy via a spreadsheet tool created by Kathryn.
+My primary role was to develop the statistical model, building upon an earlier version of the analysis conducted by Kathryn Risher.
+The results are described in @howes2023spatio, and are beginning to be used by countries to guide policy via a spreadsheet tool created by Kathryn.
 Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw) and supported by the R package [`multi.utils`](https://athowes.github.io/multi.utils).
 
 ## Background
 
-The risk of acquiring HIV infection is not equal for all individuals.
+Risk of acquiring HIV infection is not equal for all individuals.
+Moreover, variation in risk is systematic across to demographic characteristics.
+Adolescent girls and young women (AGYW) -- that is, females aged 15-29 -- are one demographic group at particular risk.
+
+The Global AIDS Strategy 2021-2026 proposed stratifying HIV prevention packages to AGYW based on local population-level HIV incidence and individual-level sexual risk behaviour.
+The idea is that prioritisation based on both of these factors is more efficient than on only or one the other.
+
+Implementing the strategy requires estimates.
 
 ## Data
 
-I used the following household surveys.
+I used household survey data.
 
 ## Model for risk group proportions
 
-I found that it was not appropriate to use the surveys without a specific transactional sex question on an equal footing as the other surveys.
-For this reason, I took a two-stage modelling approach to estimating the four risk group proportions.
-In particular, let the four risk groups be $k \in \{1, 2, 3, 4\}$, and denote being in either the third or fourth risk group by $k = 3^{+}$.
+I found that it was not appropriate to use the surveys without a specific transactional sex question on an equal footing to the other surveys.
+For this reason, I took a two-stage modelling approach to estimate the four risk group proportions.
+In particular, index the four risk groups as $k \in \{1, 2, 3, 4\}$, and denote being in either the third or fourth risk group by $k = 3^{+}$.
 First, using all the surveys, I used a multinomial logistic regression model to model the proportion of AGYW in the risk groups $k \in \{1, 2, 3^{+}\}$.
 Then, using only those surveys with a specific transactional sex question, I fit a logistic regression model to estimate the proportion of those in the $k = 3^{+}$ risk group that were in the $k = 3$ and $k = 4$ risk groups respectively.
 
 ### Spatio-temporal multinomial logistic regression
 
-As notation, let $i \in \{1, \ldots, n\}$ denote subnational units which partition the 13 studied AGYW priority countries $c[i] \in \{1, \ldots, 13\}$.
+Let $i \in \{1, \ldots, n\}$ denote districts which partition the 13 studied AGYW priority countries $c[i] \in \{1, \ldots, 13\}$.
 Consider the years 1999-2018 denoted as $t \in \{1, \ldots, T\}$, and age groups $a \in \{\text{15--19}, \text{20--24}, \text{25--29}\}$.
+Let $p_{itak} > 0$ with $\sum_{k = 1}^{3^{+}} p_{itak} = 1$, be the probability of membership of risk group $k$ for an individual in district $i$, at time $t$, in age group $a$.
+
+#### Multinomial logistic regression
+
+A baseline category multinomial logistic regression model is specified by
+\begin{align}
+    \y_{ita} &= (y_{ita1}, \ldots, y_{ita3^{+}})^\top \sim \text{Multinomial}(m_{ita}; \, p_{ita1}, \ldots, p_{ita3^{+}}), \\
+    \log(p_{itak} / p_{ita1}) &= \eta_k, k = 2, 3^{+},
+\end{align}
+where the number in risk group $k$ is $y_{itak}$, the sample size is $m_{ita} = \sum_{k = 1}^{3^{+}} y_{itak}$, $p_{itak} > 0$ is the probability of membership of the $k$th risk group, and $k = 1$ is the baseline category.
 
 #### The multinomial-Poisson transformation
 
@@ -203,7 +220,7 @@ knitr::include_graphics("figures/multi-agyw/age-disagg-fsw-line.png")
 
 #### Estimates
 
-## Calculation of prevalence and incidence stratified by risk group
+## Prevalence and incidence by risk group
 
 ### Disaggregation of Naomi estimates
 
