--- a/05-naomi-aghq.Rmd
+++ b/05-naomi-aghq.Rmd
@@ -12,10 +12,20 @@ documentclass: book
 bibliography: references.bib
 ---
 
-# Fast, approximate inference for the Naomi model {#elgm-inf}
+# Fast approximate deterministic Bayesian inference {#naomi-aghq}
 \adjustmtc
 \markboth{Fast, approximate inference for the Naomi model}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-Code for the analysis in this chapter is available from [`athowes/elgm-inf`](https://github.com/athowes/elgm-inf) and supported by the R package [`inf.utils`](https://athowes.github.io/inf.utils).
+Code for the analysis in this chapter is available from [`athowes/naomi-aghq`](https://github.com/athowes/elgm-inf) and supported by the R package [`inf.utils`](https://athowes.github.io/inf.utils).
 Include an edited version of the corresponding paper here.
+
+## Background
+
+## The Naomi model
+
+## Adaptive Gauss-Hermite quadrature
+
+## Malawi case-study
+
+## Discussion
